+ App Extra config
+ Fix report folder permission checking
+ Dev Cwiccs-dev.json config
+ Generate folder for JSON data collections by computer UUID
* Checking web token
+ Checking internet connecions
+ Retrieve ID from web site (if you have a token)

- add OS UUID
- add OS Key 
- add OS Arch
- add OS Serial
- add JSON reports
- add JSON web requests
- disk info
- general configuration for cwiccs - cwiccs.json
- fix collect features bug
- add new cwiccs argument - -json