@@ -19,11 +19,11 @@ function bindConfigs
     {
         $conf = Get-Content -Path @($scriptFolder + "\config\cwiccs.json") | ConvertFrom-Json
 
-        if ($conf.App_Status -eq "Production")
-        {
-            $config = Get-Content -Path @($scriptFolder + "\config\cwiccs.json") | ConvertFrom-Json
-        }
-        elseif ($conf.App_Status -eq "Development")
+#        if ($conf.App_Status -eq "Production")
+#        {
+#            $config = Get-Content -Path @($scriptFolder + "\config\cwiccs.json") | ConvertFrom-Json
+#        }
+        if ($conf.App_Status -eq "Development")
         {
             if (Test-Path -LiteralPath @($scriptFolder + "\config\cwiccs-dev.json"))
             {
@@ -31,7 +31,8 @@ function bindConfigs
             }
             else
             {
-                Write-Error "Config file - cwiccs-dev.json does not found. Please setup 'Production' mode in the cwiccs.json" -ErrorAction Stop
+#                Write-Error "Config file - cwiccs-dev.json does not found. Please setup 'Production' mode in the cwiccs.json" -ErrorAction Stop
+                $config = Get-Content -Path @($scriptFolder + "\config\cwiccs.json") | ConvertFrom-Json
             }
         }
         else
